dev/css/i-grid.css
/* #container {
    display: flex;
    flex-flow: column;
    width: 100%;
    height: 100%;
    position: relative;
    text-align: center;
} */

/* #hide-unhide {
    height: 40px;
    border-radius: 5px;
    border: 1px solid lightgray;
    float: left;
    margin-bottom: 1rem;
} */

table {
    margin: unset;
}

#grid {
    width: calc( ((var(--image-250) + var(--column-gap)) * var(--column-count) - var(--column-gap)) );
    margin: 0 auto;
}

.columns {
    -webkit-column-count: var(--column-count);
    -moz-column-count: var(--column-count);
    column-count: var(--column-count);
    -webkit-column-width: calc(100% / var(--column-count));
    -moz-column-width: calc(100% / var(--column-count));
    column-width: calc(100% / var(--column-count));
    -moz-column-gap: var(--column-gap);
    -webkit-column-gap: var(--column-gap);
    column-gap: var(--column-gap);
}

/* the following prevents the first figure in the 
 * column to have a margin at the top, a left-over
 * of the last figure in the previous column */
.columns figure:last-child {
    margin: 0;
}

figure {
    position: relative;
    height: auto;
    border: 1px solid;
    padding: 0;
    margin: 0 auto 20px auto;
    opacity: 1;

    /* avoid figures splitting across columns */
    /* see https://stackoverflow.com/a/17415553/183692 */
    overflow: hidden; /* fix for Firefox */
    break-inside: avoid-column;
    -webkit-column-break-inside: avoid;
}

figure img {
    width: 100%;
}
figure .reveal {
    background-color: white;
    color: grey;
    font-family: sans-serif;
    font-size: 8px;
    padding: 2px 4px;
    cursor: pointer;
    border: 1px solid grey;
    border-radius: 5px;
    text-align: center;
}
figure .reveal:hover {
    background-color: lightgrey;
    color: black;
}
figure.figure-250 { width: 300px; }
figure.figure-100 { width: 100px; }

figcaption {
    font-size: 10px;
    font-family: sans-serif;
    padding: 5px 5px 0 5px;
    text-align: left;
    cursor: pointer;
}

figcaption div.closed {
    height: 0;
}

figcaption div.open {
    height: 100%;
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}
@keyframes fadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}

#puff {
    cursor:pointer;
    display:none;
    position:absolute;
    z-index: 1000;
    height:32px;
    width:32px;
    background: url(/img/wvPeK.png) no-repeat;
}

div.switches {
    position: absolute;
    margin: 5px;
}

div.dc {
    width: 50px;
    height: 50px;
    border-radius: 25px;
    float: left;
    margin: 2px;
    cursor: pointer;
}

div.close,
div.maximize {
    width: 20px;
    height: 20px;
    border-radius: 20px;
    float: left;
    margin: 2px;
    cursor: pointer;
    line-height: 1.2em;
    font-family: sans-serif;
}

div.maximize {
    border: 1px solid green;
    background-color: green;
}

/* TO DO: will activate this later */
/* 
div.close {
    border: 1px solid red;
}

div.close:hover {
    background-color: red;
}

div.close:hover:before {
    content: 'x';
} 
*/
#search-criteria,
#pager {
    text-align: center;
}
#search-criteria {
    margin-bottom: 1rem;
}
#pager {
    /* border-top: 1px solid silver; */
    margin-top: 3rem;
}
#pager.filled {
    border-top: 1px solid silver;
}
#pager a {
    margin: 1rem;
}
.crit-count,
.crit-key {
    font-weight: 800;
}

